updated hashtags and fixed some layout issues

--- a/source/stylesheets/_custom.scss
+++ b/source/stylesheets/_custom.scss
@@ -1,6 +1,10 @@
 $apmared: #EE1C24;
 $blue: rgb(11, 0, 52);
 
+body{
+  overflow-x: hidden;
+}
+
 h1,h2,h3,h4,h5,h6{
   font-family: 'Work Sans', sans-serif;
   font-weight: 900;
@@ -101,7 +105,7 @@ h1,h2,h3,h4,h5,h6{
 }
 
 @media (max-width: 640px){
-  .fearless-header{
+  .fearless-header, h3{
     font-size: 33px !important;
   }
   .parallax{
